2025-07-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.0.1 released

	* tramp-smb.el (tramp-smb-handle-file-attributes):
	Use `directory-file-name'.

2025-07-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-tramp-local-environment): Do not override
	`process-environment'.  Set "TERM", "PROMPT_COMMAND", "PS1" and
	"INSIDE_EMACS".  (Bug#79103)

	* tramp-sh.el (tramp-maybe-open-connection): Do not set "TERM",
	"PROMPT_COMMAND" and "PS1".

	* trampver.el.in (tramp-inside-emacs): Remove duplicate entries.

2025-07-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-bundle-read-file-names): Fix docstring.
	(tramp-sh-gio-monitor-process-filter): Extend error strings.

2025-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-connection-local-default-system-variables):
	Add "" to `exec-suffixes'.  (Bug#78886)

2025-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (with-tramp-local-environment): New defmacro.
	(tramp-start-process): New defun.
	(tramp-call-process, tramp-call-process-region)
	(tramp-process-lines): Use `with-tramp-local-environment'.

	* tramp-adb.el (tramp-adb-maybe-open-connection):
	* tramp-androidsu.el (tramp-androidsu-maybe-open-connection):
	* tramp-gvfs.el (tramp-gvfs-handle-file-notify-add-watch):
	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band)
	(tramp-maybe-open-connection):
	* tramp-smb.el (tramp-smb-handle-copy-directory)
	(tramp-smb-handle-file-acl)
	(tramp-smb-handle-file-notify-add-watch)
	(tramp-smb-handle-set-file-acl, tramp-smb-maybe-open-connection):
	* tramp-sudoedit.el (tramp-sudoedit-send-command):
	Use `tramp-start-process'.  Do not call	`tramp-post-process-creation'.

2025-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-integration.el (tramp-connection-local-default-system-variables):
	Add also `exec-suffixes'.

	* tramp-smb.el (tramp-smb-maybe-open-connection): Use default
	values of `path-separator', `null-device' and `exec-suffixes'.